angular/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');

@keyframes donut-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

:root  {
  --lpx-logo: url('/assets/images/logo/logo-light.png');
  --lpx-logo-icon: url('/assets/images/logo/logo-light-thumbnail.png');
}
.donut {
  display: inline-block;
  border: 4px solid rgba(0, 0, 0, 0.1);
  border-left-color: #7983ff;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  animation: donut-spin 1.2s linear infinite;

  &.centered {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }}
//abp-sidebar {
    //float: left!important;
//}
abp-navbar  {
    float: right!important;
}
#toast-container > div {
    opacity:1;
}
.button-strip {
    button:not(:last-child) {
        margin-right: 5px;
    }
    abp-button:not(:last-child) {
        margin-right: 5px;
    }
}

.field-validation-error.text-danger span {
    border-bottom: 1px solid #d12941 !important;
    border: 1px solid #d12941 !important;
    border-top: 0 !important;
}

body {
    background-color: #F1EFF4;
}

body .h1, body .h2, body .h3, body .h4, body .h5, body .h6, body h1, body h2, body h3, body h4, body h5, body h6 {
    font-family: "Titillium Web", sans-serif;
}

.card.welcomeCard {
    text-align:center;
}

.welcome-logo {
    margin: 1.0rem auto 2.0rem auto;
    width: 250px;
    text-align:center;
}

.welcome-logo img {
    margin: auto;
    text-align:center;
}
.lp-closed .lp-sidebar, .lp-opened-sidebar .lp-sidebar {
    background: #282d37;
}
//Homepage
//topbar
.home-topbar-items {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
} 
.home-title-grid {
    grid-template-columns: auto auto;
}
.thumbnail-image {
    width: 40px;
    height: 32px;
}
//navigation
.homepage-navigation {
    height: 30px;
    width: 100%;
    background-color: #1db309;
}
//grid
.grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
    padding: 10px;
    gap: 0.5rem;
}
.grid-item {
    font-size: 30px;
    text-align: center;
    align-content: center;
    border-radius: 8px;
    height: 10rem;
    overflow: hidden;
    position: relative;
}
.homepage-grid-image-style {
    height: 100%;
    width: 100%;
    transition: transform .4s;
}
.homepage-grid-image-style:hover {
    transform: scale(115%);
}
.grid-item-text {
    position: absolute;
    top: 6px;
    left: 6px;
    color: white;
}
//login button styling
.btn.btn-login {
    --bs-btn-padding-x: 1rem !important;
    --bs-btn-padding-y: 0.25rem !important;
}

.btn.btn-login:hover {
    background-color:  #1db309;
}

.btn.btn-primary {
    background-color: #1db309;
    border-color: #1db309;
}

.btn.btn-primary:hover, .btn.btn-primary:focus {
    background-color: #54d144;
    border-color: #54d144;
}

a {
    color: #54d144;
}
a:hover {
    color: #54d144;
}

.btn.btn-secondary {
    background-color: #666666;
    border-color: #666666;
}

.btn.btn-btn-secondary:hover, .btn.btn-btn-secondary:focus {
    background-color: #999999;
    border-color: #999999;
}


//tab strip link color
.k-tabstrip-items-wrapper .k-item {
    color: #1db309;
}
.k-tabstrip-items-wrapper .k-item:hover, .k-tabstrip-items-wrapper .k-item:focus {
    color: #1db309;
}
//checkbox checked color
.k-checkbox:checked, .k-checkbox.k-checked {
    border-color: #1db309;
    background-color: #1db309;
}
.k-checkbox:checked:hover, .k-checkbox.k-checked:hover, .k-checkbox:checked:focus, .k-checkbox.k-checked:focus {
    border-color: #1db309;
    background-color: #1db309;
}
.editor-form {
    background-color: #ffffff;
    padding: 14px;
}
.k-datepicker {
    width: 180px;
}
.k-combobox {
    width: 300px;
}
.below-form {
    padding-top: 20px;
}

.grid400 .k-grid-content
{
    min-height: 100px !important;
    max-height: 400px !important;
}

.nowrap {
    white-space: nowrap;
}

.k-tabstrip-items-wrapper {
    z-index: 1!important;
}
.lp-closed .lp-sidebar .lp-sidebar-navi ul li.active-page>a>span.lp-icon, .lp-closed .lp-sidebar .lp-sidebar-navi ul li.current>a>span.lp-icon, .lp-opened-sidebar .lp-sidebar .lp-sidebar-navi ul li.active-page>a>span.lp-icon, .lp-opened-sidebar .lp-sidebar .lp-sidebar-navi ul li.current>a>span.lp-icon {
    color: #1db309;
    opacity: 1;
}
.lp-closed .lp-sidebar .lp-sidebar-navi ul li>a:hover>span.lp-icon, .lp-opened-sidebar .lp-sidebar .lp-sidebar-navi ul li>a:hover>span.lp-icon {
    color: #1db309;
    opacity: 1;
}
.lp-arrow-icon {
    color: #ffffff !important;
    opacity: 0.8 !important;
}
.lp-opened-sidebar .lp-sidebar .lp-sidebar-navi ul li.current>ul .current>a:before {
    border: 2px solid #1db309 !important;
}

//This overrides the normal padding that was preventing the green navbar from going the width of the screen
.lpx-content-container {
    background-color: #e1e1e1;
}
.lpx-topbar-container .lpx-topbar {
    background-color: #e1e1e1;
}
.lpx-content-container .lpx-content {
    padding: 0;
    margin: 0;
}

//Standardised padding and margin
//Seems like a lot of overkill and extra work. But for consistency and updating standard sizes down the line
// using padding in this way and adding these classes in the HTML makes maintanance way easier
//padding
.pd-1 {
    padding: 0.25rem;
}

.pd-2 {
    padding: 0.5rem;
}

.pd-3 {
    padding: 1rem;
}

.pd-4 {
    padding: 2rem;
}

//padding-left
.pd-l-1 {
    padding-left: 0.25rem;
}

.pd-l-2 {
    padding-left: 0.5rem;
}

.pd-l-3 {
    padding-left: 1rem;
}

.pd-l-4 {
    padding-left: 2rem;
}

//padding-right
.pd-r-1 {
    padding-right: 0.25rem;
}

.pd-r-2 {
    padding-right: 0.5rem;
}

.pd-r-3 {
    padding-right: 1rem;
}

.pd-r-4 {
    padding-right: 2rem;
}

//padding-top
.pd-t-1 {
    padding-top: 0.25rem;
}

.pd-t-2 {
    padding-top: 0.5rem;
}

.pd-t-3 {
    padding-top: 1rem;
}

.pd-t-4 {
    padding-top: 2rem;
}

//padding-bottom
.pd-b-1 {
    padding-bottom: 0.25rem;
}

.pd-b-2 {
    padding-bottom: 0.5rem;
}

.pd-b-3 {
    padding-bottom: 1rem;
}

.pd-b-4 {
    padding-bottom: 2rem;
}

//margin
.mg-1 {
    margin: 0.25rem;
}

.mg-2 {
    margin: 0.5rem;
}

.mg-3 {
    margin: 1rem;
}

.mg-4 {
    margin: 2rem;
}

//margin-left
.mg-l-1 {
    margin-left: 0.25rem;
}

.mg-l-2 {
    margin-left: 0.5rem;
}

.mg-l-3 {
    margin-left: 1rem;
}

.mg-l-4 {
    margin-left: 2rem;
}

//margin-right
.mg-r-1 {
    margin-right: 0.25rem;
}

.mg-r-2 {
    margin-right: 0.5rem;
}

.mg-r-3 {
    margin-right: 1rem;
}

.mg-r-4 {
    margin-right: 2rem;
}

//margin-top
.mg-t-1 {
    margin-top: 0.25rem;
}

.mg-t-2 {
    margin-top: 0.5rem;
}

.mg-t-3 {
    margin-top: 1rem;
}

.mg-t-4 {
    margin-top: 2rem;
}

//margin-bottom
.mg-b-1 {
    margin-bottom: 0.25rem;
}

.mg-b-2 {
    margin-bottom: 0.5rem;
}

.mg-b-3 {
    margin-bottom: 1rem;
}

.mg-b-4 {
    margin-bottom: 2rem;
}

